<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#F4EBC3">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="10"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:text="@string/instruction_titre"
        />

        <!-- Layout de la première étape -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/instruction_icon_1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
            />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/instruction_etape_1"
            />

        </LinearLayout>

        <!-- Layout de la seconde étape -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="20">

            <ImageView
                android:src="@drawable/instruction_icon_2"
                android:scaleType="fitXY"
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="40dp"
            />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/instruction_etape_2"
            />

        </LinearLayout>
        <!-- Layout de la troisième étape -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="20">

            <ImageView
                android:src="@drawable/instruction_icon_3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
            />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/instruction_etape_3"
            />

        </LinearLayout>

        <!-- Layout de la quatrième étape -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="20">

            <ImageView
                android:src="@drawable/instruction_icon_4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
            />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/instruction_etape_4"
            />

        </LinearLayout>

        <!-- Layout du bouton étape -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="10">

            <EditText
                android:layout_width="100dp"
                android:layout_height="40dp"
                style="@android:style/TextAppearance.Holo.Widget.EditText"
                android:id="@+id/text_ip"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/instruction_bouton_fermer"
                android:id="@+id/bouton_fermer"
            />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>

