<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4EBC3"
    android:weightSum="100"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <!-- Layout bouton avancer -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="40"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fleche_avancer"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:text="@string/selection"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="bottom|center"
        />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fleche_avancer"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="top|center"
            android:id="@+id/chronometre"
        />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="20"
        android:weightSum="100">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fleche_avancer"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:text="@string/accepter"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_weight="50"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/bouton_accepter"
        />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fleche_avancer"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:text="@string/refuser"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_weight="50"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/bouton_refuser"
        />

    </LinearLayout>


</LinearLayout>